Table "adempiere"."ad_user" {
  "ad_user_id" numeric(10,0) [pk]
  "ad_client_id" numeric(10,0) [not null]
  "ad_org_id" numeric(10,0) [not null]
  "name" varchar(60) [not null]
  "name2" varchar(60)
  "description" varchar(255)
  "email" varchar(120)
  "value" varchar(60)
  "password" varchar(255)
  "isactive" "char (1)" [not null, default: 'Y']
  "created" timestamp [not null, default: `now()`]
  "createdby" numeric(10,0) [not null]
  "updated" timestamp [not null, default: `now()`]
  "updatedby" numeric(10,0) [not null]

  Checks {
    `isactive IN ('Y','N')` [name: 'ad_user_isactive_check']
  }
}

Table "adempiere"."ad_role" {
  "ad_role_id" numeric(10,0) [pk]
  "ad_client_id" numeric(10,0) [not null]
  "ad_org_id" numeric(10,0) [not null]
  "name" varchar(60) [not null]
  "description" varchar(255)
  "isactive" "char (1)" [not null, default: 'Y']
  "created" timestamp [not null, default: `now()`]
  "createdby" numeric(10,0) [not null]
  "updated" timestamp [not null, default: `now()`]
  "updatedby" numeric(10,0) [not null]

  Checks {
    `isactive IN ('Y','N')` [name: 'ad_role_isactive_check']
  }
}

Table "adempiere"."ad_user_roles" {
  "ad_user_roles_id" numeric(10,0) [pk]
  "ad_client_id" numeric(10,0) [not null]
  "ad_org_id" numeric(10,0) [not null]
  "ad_role_id" numeric(10,0) [not null]
  "ad_user_id" numeric(10,0) [not null]
  "isactive" "char (1)" [not null, default: 'Y']
  "created" timestamp [not null, default: `now()`]
  "createdby" numeric(10,0) [not null]
  "updated" timestamp [not null, default: `now()`]
  "updatedby" numeric(10,0) [not null]

  Checks {
    `isactive IN ('Y','N')` [name: 'ad_user_roles_isactive_check']
  }
}

Table "adempiere"."ad_window_access" {
  "ad_window_access_id" numeric(10,0) [pk]
  "ad_client_id" numeric(10,0) [not null]
  "ad_org_id" numeric(10,0) [not null]
  "ad_role_id" numeric(10,0) [not null]
  "isreadwrite" "char (1)" [not null, default: 'Y']
  "isactive" "char (1)" [not null, default: 'Y']
  "created" timestamp [not null, default: `now()`]
  "createdby" numeric(10,0) [not null]
  "updated" timestamp [not null, default: `now()`]
  "updatedby" numeric(10,0) [not null]

  Checks {
    `isactive IN ('Y','N')` [name: 'ad_window_access_isactive_check']
    `isreadwrite IN ('Y','N')` [name: 'ad_window_access_isreadwrite_check']
  }
}

Table "adempiere"."ad_process_access" {
  "ad_process_access_id" numeric(10,0) [pk]
  "ad_client_id" numeric(10,0) [not null]
  "ad_org_id" numeric(10,0) [not null]
  "ad_role_id" numeric(10,0) [not null]
  "isreadwrite" "char (1)" [not null, default: 'Y']
  "isactive" "char (1)" [not null, default: 'Y']
  "created" timestamp [not null, default: `now()`]
  "createdby" numeric(10,0) [not null]
  "updated" timestamp [not null, default: `now()`]
  "updatedby" numeric(10,0) [not null]

  Checks {
    `isactive IN ('Y','N')` [name: 'ad_process_access_isactive_check']
    `isreadwrite IN ('Y','N')` [name: 'ad_process_access_isreadwrite_check']
  }
}

Table "adempiere"."ad_user_orgaccess" {
  "ad_user_orgaccess_id" numeric(10,0) [pk]
  "ad_client_id" numeric(10,0) [not null]
  "ad_org_id" numeric(10,0) [not null]
  "ad_user_id" numeric(10,0) [not null]
  "isactive" "char (1)" [not null, default: 'Y']
  "isreadonly" "char (1)" [not null, default: 'N']
  "created" timestamp [not null, default: `now()`]
  "createdby" numeric(10,0) [not null]
  "updated" timestamp [not null, default: `now()`]
  "updatedby" numeric(10,0) [not null]

  Checks {
    `isactive IN ('Y','N')` [name: 'ad_user_orgaccess_isactive_check']
    `isreadonly IN ('Y','N')` [name: 'ad_user_orgaccess_isreadonly_check']
  }
}

Table "adempiere"."pst_department" {
  "ad_client_id" numeric(10,0) [not null]
  "ad_org_id" numeric(10,0) [not null]
  "created" timestamp [not null, default: `now()`]
  "createdby" numeric(10,0) [not null]
  "isactive" "char (1)" [not null, default: 'Y']
  "name" varchar(60)
  "pst_department_id" numeric(10,0) [pk]
  "pst_limitassetsallowed" numeric(10,0)
  "updated" timestamp [not null, default: `now()`]
  "updatedby" numeric(10,0) [not null]
  "uuid" varchar(36)
  "value" varchar(60)

  Checks {
    `isactive IN ('Y','N')` [name: 'pst_department_isactive_check']
  }
}

Table "adempiere"."pst_employees" {
  "ad_client_id" numeric(10,0) [not null]
  "ad_org_id" numeric(10,0) [not null]
  "created" timestamp [not null, default: `now()`]
  "createdby" numeric(10,0) [not null]
  "isactive" "char (1)" [not null, default: 'Y']
  "name" varchar(60)
  "pst_employees_id" numeric(10,0) [pk]
  "updated" timestamp [not null, default: `now()`]
  "updatedby" numeric(10,0) [not null]
  "uuid" varchar(36)
  "value" varchar(60)
  "taxid" varchar(8)
  "pst_assetasigned" numeric
  "name2" varchar(60)
  "isemployee" "char (1)" [default: 'Y']
  "pst_department_id" numeric(10,0)
  "pst_nacionality" varchar(22)
  "gender" "char (1)"
  "pst_limitassetsallowed" numeric(10,0)
  "discord_identifier" varchar(40)

  Checks {
    `isactive IN ('Y','N')` [name: 'pst_employees_isactive_check']
    `isemployee IN ('Y','N')` [name: 'pst_employees_isemployee_check']
  }
}

Table "adempiere"."m_product_class" {
  "m_product_class_id" numeric(10,0) [pk]
  "ad_client_id" numeric(10,0) [not null]
  "ad_org_id" numeric(10,0) [not null]
  "created" timestamp [not null]
  "createdby" numeric(10,0) [not null]
  "isactive" "char (1)" [not null, default: 'Y']
  "name" varchar(60) [not null]
  "description" varchar(60) [not null]
  "updated" timestamp [not null]
  "updatedby" numeric(10,0) [not null]
  "value" varchar(255) [not null]
  "uuid" varchar(36)

  Checks {
    `isactive IN ('Y','N')` [name: 'm_product_class_isactive_check']
  }

  Indexes {
    (ad_client_id, value) [unique, name: "m_product_class_value"]
  }
}

Table "adempiere"."c_bpartner" {
  "c_bpartner_id" numeric(10,0) [pk]
  "ad_client_id" numeric(10,0) [not null]
  "ad_org_id" numeric(10,0) [not null]
  "isactive" "char (1)" [not null, default: 'Y']
  "created" timestamp [not null]
  "createdby" numeric(10,0) [not null]
  "updated" timestamp [not null]
  "updatedby" numeric(10,0) [not null]
  "uuid" varchar(36)
  "value" varchar(40) [not null]
  "name" varchar(255) [not null]
  "name2" varchar(255)
  "address1" varchar(60)
  "phone" varchar(40)
  "phone2" varchar(40)
  "pst_rif" varchar(9)
  "pst_legalnature" varchar(20)
}

Table "adempiere"."pst_location" {
  "pst_location_id" numeric(10,0) [pk]
  "ad_client_id" numeric(10,0) [not null]
  "ad_org_id" numeric(10,0) [not null]
  "created" timestamp [not null]
  "createdby" numeric(10,0) [not null]
  "isactive" "char (1)" [not null, default: 'Y']
  "name" varchar(60)
  "updated" timestamp [not null]
  "updatedby" numeric(10,0) [not null]
  "uuid" varchar(36)
  "value" varchar(60)

  Checks {
    `isactive IN ('Y','N')` [name: 'pst_location_isactive_check']
  }
}

Table "adempiere"."m_product" {
  "m_product_id" numeric(10,0) [pk]
  "ad_client_id" numeric(10,0) [not null]
  "ad_org_id" numeric(10,0) [not null]
  "isactive" "char (1)" [not null, default: 'Y']
  "created" timestamp [not null, default: `now()`]
  "createdby" numeric(10,0) [not null]
  "updated" timestamp [not null, default: `now()`]
  "updatedby" numeric(10,0) [not null]
  "uuid" varchar(36)
  "value" varchar(510) [not null]
  "name" varchar(255) [not null]
  "m_product_class_id" numeric(10,0)
  "c_uom_id" numeric(10,0) [not null]
  "isstocked" "char (1)" [not null, default: 'Y']
  "pst_location_id" numeric(10,0)
}

Table "adempiere"."a_asset" {
  "a_asset_id" numeric(10,0) [pk]
  "ad_client_id" numeric(10,0) [not null]
  "ad_org_id" numeric(10,0) [not null]
  "isactive" "char (1)" [not null, default: 'Y']
  "created" timestamp [not null, default: `now()`]
  "createdby" numeric(10,0) [not null]
  "updated" timestamp [not null, default: `now()`]
  "updatedby" numeric(10,0) [not null]
  "uuid" varchar(36)
  "serno" varchar(255)
  "name" varchar(60) [not null]
  "m_product_id" numeric(10,0) [not null]
  "m_product_class_id" numeric(10,0)
  "pst_assetmodel_id" numeric(10,0)
  "pst_assetmark_id" numeric(10,0)
  "c_bpartner_id" numeric(10,0)
  "pst_location_id" numeric(10,0)
  "a_asset_status" varchar(2) [default: 'NW']
  "a_asset_price" numeric
}

Table "adempiere"."a_asset_delivery" {
  "a_asset_delivery_id" numeric(10,0) [pk]
  "ad_client_id" numeric(10,0) [not null]
  "ad_org_id" numeric(10,0) [not null]
  "created" timestamp [not null, default: `now()`]
  "createdby" numeric(10,0) [not null]
  "updated" timestamp [not null, default: `now()`]
  "updatedby" numeric(10,0) [not null]
  "uuid" varchar(36)
  "a_asset_id" numeric(10,0) [not null]
  "movementdate" timestamp [not null]
  "description" varchar(255)
  "ad_user_id" numeric(10,0)
  "pst_employees_id" numeric(10,0)
  "a_asset_status" varchar(20)
  "pst_location_id" numeric(10,0)
  "m_locatorto_id" numeric(10,0)
  "isreubicate" "char (1)" [default: 'N']
}

Ref "fk_ad_user_roles_role":"adempiere"."ad_role"."ad_role_id" < "adempiere"."ad_user_roles"."ad_role_id"

Ref "fk_ad_user_roles_user":"adempiere"."ad_user"."ad_user_id" < "adempiere"."ad_user_roles"."ad_user_id"

Ref "fk_ad_window_access_role":"adempiere"."ad_role"."ad_role_id" < "adempiere"."ad_window_access"."ad_role_id"

Ref "fk_ad_process_access_role":"adempiere"."ad_role"."ad_role_id" < "adempiere"."ad_process_access"."ad_role_id"

Ref "fk_ad_user_orgaccess_user":"adempiere"."ad_user"."ad_user_id" < "adempiere"."ad_user_orgaccess"."ad_user_id"

Ref "fk_pst_employees_department":"adempiere"."pst_department"."pst_department_id" < "adempiere"."pst_employees"."pst_department_id"

Ref "fk_mproductclass":"adempiere"."m_product_class"."m_product_class_id" < "adempiere"."m_product"."m_product_class_id"

Ref "fk_pst_location":"adempiere"."pst_location"."pst_location_id" < "adempiere"."m_product"."pst_location_id"

Ref "fk_mproduct":"adempiere"."m_product"."m_product_id" < "adempiere"."a_asset"."m_product_id"

Ref "fk_mproductclass":"adempiere"."m_product_class"."m_product_class_id" < "adempiere"."a_asset"."m_product_class_id"

Ref "fk_cbpartner":"adempiere"."c_bpartner"."c_bpartner_id" < "adempiere"."a_asset"."c_bpartner_id"

Ref "fk_pstlocation":"adempiere"."pst_location"."pst_location_id" < "adempiere"."a_asset"."pst_location_id"

Ref "fk_aasset":"adempiere"."a_asset"."a_asset_id" < "adempiere"."a_asset_delivery"."a_asset_id"

Ref "fk_aduser":"adempiere"."ad_user"."ad_user_id" < "adempiere"."a_asset_delivery"."ad_user_id"

Ref "fk_pstlocation":"adempiere"."pst_location"."pst_location_id" < "adempiere"."a_asset_delivery"."pst_location_id"
